Implementando a primeira versão do Landing Page

--- a/index.html
+++ b/index.html
@@ -1,12 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Treinamento</title>
+    <title>Chalés em Ubatuba</title>
+    <link rel="stylesheet" href="">
 </head>
 <body>
-    
+    <div id="principal">
+        
+        <div id="imagem">
+            <img src="https://media-cdn.tripadvisor.com/media/photo-s/07/47/b6/d2/chales-do-pisco.jpg" alt="Chalés em Ubatuba">
+        </div>
+        <div id="posicionamento">
+            <h1>Chalés na melhor localização de Ubatuba</h1>
+            <p>
+                Hospede-se há 100 metros da praia e dos melhores comércios da região central de Ubatuba
+            </p>
+            <button>Fale conosco no WhatsApp</button>
+        </div>
+    </div>
 </body>
 </html>
