adicionando classes de CSS e importando fonte do google

--- a/index.html
+++ b/index.html
@@ -4,20 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chalés em Ubatuba</title>
-    <link rel="stylesheet" href="">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <div id="principal">
         
         <div id="imagem">
-            <img src="https://media-cdn.tripadvisor.com/media/photo-s/07/47/b6/d2/chales-do-pisco.jpg" alt="Chalés em Ubatuba">
+            <img src="https://media-cdn.tripadvisor.com/media/photo-s/07/47/b6/d2/chales-do-pisco.jpg" class="cover" alt="Chalés em Ubatuba">
         </div>
         <div id="posicionamento">
-            <h1>Chalés na melhor localização de Ubatuba</h1>
-            <p>
+            <h1 class="vp">Chalés na melhor localização de Ubatuba</h1>
+            <p class="tagline">
                 Hospede-se há 100 metros da praia e dos melhores comércios da região central de Ubatuba
             </p>
-            <button>Fale conosco no WhatsApp</button>
+            <div class="cta">
+                <a href="#">Fale conosco no WhatsApp</a>
+            </div>
         </div>
     </div>
 </body>
