direcionando o cta para a conversa wpp

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 Hospede-se há 100 metros da praia e dos melhores comércios da região central de Ubatuba
             </p>
             <div class="cta">
-                <a href="#">Fale conosco no WhatsApp</a>
+                <a href="https://wa.link/ypkgjp" target="_blank">Fale conosco no WhatsApp</a>
             </div>
         </div>
     </div>
